--- a/splitdata-binram/Makefile
+++ b/splitdata-binram/Makefile
@@ -63,7 +63,7 @@ ifeq ($(DEBUG_MODE), 0)
     N64LIB          = -lnusys -lgultra_rom
     MAKEROMFLAGS    = 
 else
-    CODEOBJECTS     = $(CODECFILES:.c=.o) $(NUOBJ) $(DEBUGFILES:.c=.o) $(DATAFILES:.c=.o)
+    CODEOBJECTS     = $(CODECFILES:.c=.o) $(NUOBJ) $(DEBUGFILES:.c=.o)
     OPTIMIZER       = -g
     LCDEFS          = -DDEBUG  -DF3DEX_GBI_2 -DNOT_SPEC
     N64LIB          = -lnusys_d -lgultra_d 
